Fixing the UI error with gap beetwen the nav-bar and the body, mentioned earlier in the comments

--- a/djangocali-portal/static/css/project.css
+++ b/djangocali-portal/static/css/project.css
@@ -39,10 +39,12 @@ body {
     height: 100%;
 }
 
-/* You can change the height of the carousel by changing the height in the class below. It is set to 50% by default, but can be any height! */
+body {
+    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+}
 
 .carousel {
-    height: 50%;
+    height: 50%; /* You can change the height of the carousel by changing the height in the class below. It is set to 50% by default, but can be any height! */
 }
 
 .item,
